--- a/woodcut/parts/footer.html
+++ b/woodcut/parts/footer.html
@@ -1,5 +1,5 @@
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"3em","right":"3em","bottom":"3em","left":"3em"}}}} -->
-<div class="wp-block-group" style="padding-top:3em;padding-right:3em;padding-bottom:3em;padding-left:3em"><!-- wp:search {"label":"Search","showLabel":false,"buttonText":"Search"} /-->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"5vw","right":"5vw","bottom":"5vw","left":"5vw"}}}} -->
+<div class="wp-block-group" style="padding-top:5vw;padding-right:5vw;padding-bottom:5vw;padding-left:5vw"><!-- wp:search {"label":"Search","showLabel":false,"buttonText":"Search"} /-->
 
 <!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"center"}} -->
 <div class="wp-block-group"><!-- wp:site-title /-->
