--- a/woodcut/parts/header.html
+++ b/woodcut/parts/header.html
@@ -3,5 +3,5 @@
 
 <!-- wp:site-tagline /-->
 
-<!-- wp:navigation {"ref":783,"overlayMenu":"never"} /--></div>
+<!-- wp:navigation {"overlayMenu":"never"} /--></div>
 <!-- /wp:group -->
