remove hardcoded nav ref

--- a/triangulate/parts/header.html
+++ b/triangulate/parts/header.html
@@ -6,7 +6,7 @@
 <div class="wp-block-group"><!-- wp:site-tagline {"fontSize":"medium"} /--></div>
 <!-- /wp:group -->
 
-<!-- wp:navigation {"ref":2121,"overlayMenu":"always","layout":{"type":"flex","setCascadingProperties":true,"orientation":"horizontal","justifyContent":"space-between"}} /--></div>
+<!-- wp:navigation {"overlayMenu":"always","layout":{"type":"flex","setCascadingProperties":true,"orientation":"horizontal","justifyContent":"space-between"}} /--></div>
 <!-- /wp:group --></div>
 <!-- /wp:group -->
 
